fixing border on ROP page: was not collapsed between 2 panes
git-svn-id: svn+ssh://svn.lablz.com/hosts/trunk/hosts@12272 483a4429-297d-4d5f-a489-5c5d2c303994

--- a/styles/common-template.css
+++ b/styles/common-template.css
@@ -82,6 +82,7 @@ img.fade {
 #user span { color: &[SecondaryColorA_3_brighter];; font-weight: bold;}
 
 #dataEntry td { font-size: 1em; }
+#dataEntry table { border-collapse: collapse; }
 #siteResourceList td, #resourceList td, #div_Info td, .widget td { height: 30px; font-size: 1em; }
 #siteResourceList #blog td, #siteResourceList .panel_block td { height: auto; }
 #siteResourceList #front {background-color: &[BackgroundColor];}
